feat(react): add wide slide and code slide element

--- a/talk/index.html
+++ b/talk/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width initial-scale=1 user-scalable=no"/>
   <title>Kotlin.JS</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/themes/prism.min.css">
 </head>
 <body>
 <div id="root"></div>
